LOW / Tests are now stateless + add dependency on javax.xml.bind for Java 9